<resources>
    <string name="app_name">Sub3</string>
    <string name="Title">Judul</string>
    <string name="Popularity">Popularitas</string>
    <string name="ReleaseDate">Tanggal Rilis</string>
    <string name="show">Show</string>
    <string name="activity_details_img">detail image movie</string>
    <string name="title">title movie</string>
    <string name="rating">rating movie</string>
    <string name="release_date">Tanggal Rilis</string>
    <string name="description">Deskripsi Movie</string>
    <string name="genre">genre movie</string>
    <string name="description_movie">Deskripsi Movie</string>
</resources>
